--- a/.github/workflows/main_e-shop-frontend.yml
+++ b/.github/workflows/main_e-shop-frontend.yml
@@ -27,7 +27,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        REACT_APP_BASE_API_URL="https://e-shop-backend.azurewebsites.net" REACT_APP_OAUTH_URL="https://e-shop-backend.azurewebsites.net" npm run build --if-present
+        REACT_APP_BASE_API_URL="https://e-shop-backend.azurewebsites.net/api/v1" REACT_APP_OAUTH_URL="https://e-shop-backend.azurewebsites.net" npm run build --if-present
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
