--- a/.github/workflows/main_e-shop-frontend2.yml
+++ b/.github/workflows/main_e-shop-frontend2.yml
@@ -26,7 +26,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm run build --if-present
+        REACT_APP_OAUTH_URL='https://e-shop-backend.azurewebsites.net' REACT_APP_BASE_API_URL='https://e-shop-backend.azurewebsites.net/api/v1' npm run build --if-present
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
